--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,6 +5,7 @@ import GTMBody from '../components/GTMBody.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import QuoteModal from '../components/QuoteModal.jsx';
+import '../styles/global.css';
 
 interface Props {
   title: string;
