--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,7 +58,7 @@ const howItWorksSteps = [
   description="We find hungry, humble, smart A-players that cost less than 50% of their U.S. equivalent. Expert staffing agency for offshore talent."
 >
   <Hero
-    title="We find hungry, humble, smart A-players that cost less than 50% of their U.S. equivalent"
+    title=""
     description="We're a staffing agency that finds the best offshore talent for your business."
     primaryCTA={{ text: 'Request a quote', openModal: true }}
     secondaryCTA={{ text: 'Learn more', href: '/how-it-works' }}
