--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -22,7 +22,7 @@ const {
 } = Astro.props;
 ---
 
-<section class="relative bg-gray-50 overflow-hidden py-12 sm:py-16 lg:py-20">
+<section class="relative bg-gray-50 overflow-hidden pt-32 pb-12 sm:pt-36 sm:pb-16 lg:pt-40 lg:pb-20">
   <div class="relative w-full mx-auto px-4 sm:px-6 lg:px-8" style="max-width: 1400px;">
     <div class="bg-white rounded-3xl shadow-lg overflow-hidden border border-gray-200">
       <div class="grid lg:grid-cols-2 items-stretch min-h-[600px]">
