--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -131,6 +131,7 @@ const { title, description, image, type, canonical, noindex } = Astro.props;
     font-weight: 400;
     line-height: 1.2;
     letter-spacing: normal;
+    font-size: 1.2;
   }
 
   p {
