--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -125,14 +125,16 @@ const { title, description, image, type, canonical, noindex } = Astro.props;
     font-family: 'Montserrat', sans-serif;
     font-size: 3.5rem;
     line-height: 1.2;
-    font-weight: 700;
+    font-weight: 600;
+    color: rgb(52, 58, 90);
   }
 
   h2 {
     font-family: 'Montserrat', sans-serif;
     font-size: 2.5rem;
     line-height: 1.2;
-    font-weight: 700;
+    font-weight: 600;
+    color: rgb(40, 40, 40);
   }
 
   h3 {
@@ -140,6 +142,7 @@ const { title, description, image, type, canonical, noindex } = Astro.props;
     font-size: 2rem;
     line-height: 1.2;
     font-weight: 600;
+    color: rgb(40, 40, 40);
   }
 
   h4 {
@@ -147,6 +150,7 @@ const { title, description, image, type, canonical, noindex } = Astro.props;
     font-size: 1.5rem;
     line-height: 1.3;
     font-weight: 600;
+    color: rgb(40, 40, 40);
   }
 
   h5 {
@@ -154,6 +158,7 @@ const { title, description, image, type, canonical, noindex } = Astro.props;
     font-size: 1.25rem;
     line-height: 1.4;
     font-weight: 600;
+    color: rgb(40, 40, 40);
   }
 
   h6 {
@@ -161,6 +166,7 @@ const { title, description, image, type, canonical, noindex } = Astro.props;
     font-size: 1rem;
     line-height: 1.4;
     font-weight: 600;
+    color: rgb(40, 40, 40);
   }
 
   p {
