--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -84,16 +84,16 @@
     font-family: var(--font-display);
     font-size: var(--font-size-h1);
     line-height: 1.2;
-    font-weight: 700;
-    color: var(--color-navy);
+    font-weight: 600;
+    color: rgb(52, 58, 90);
   }
 
   h2 {
     font-family: var(--font-display);
     font-size: var(--font-size-h2);
     line-height: 1.2;
-    font-weight: 700;
-    color: var(--color-navy);
+    font-weight: 600;
+    color: rgb(40, 40, 40);
   }
 
   h3 {
@@ -101,7 +101,7 @@
     font-size: var(--font-size-h3);
     line-height: 1.2;
     font-weight: 600;
-    color: var(--color-navy);
+    color: rgb(40, 40, 40);
   }
 
   h4 {
@@ -109,7 +109,7 @@
     font-size: var(--font-size-h4);
     line-height: 1.3;
     font-weight: 600;
-    color: var(--color-navy);
+    color: rgb(40, 40, 40);
   }
 
   h5 {
@@ -117,7 +117,7 @@
     font-size: var(--font-size-h5);
     line-height: 1.4;
     font-weight: 600;
-    color: var(--color-navy);
+    color: rgb(40, 40, 40);
   }
 
   h6 {
@@ -125,7 +125,7 @@
     font-size: var(--font-size-h6);
     line-height: 1.4;
     font-weight: 600;
-    color: var(--color-navy);
+    color: rgb(40, 40, 40);
   }
 
   p {
