--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import services from '../data/services.json';
 import testimonials from '../data/testimonials.json';
 import logos from '../data/logos.json';
 
-const heroImage = 'https://images.pexels.com/photos/3184291/pexels-photo-3184291.jpeg?auto=compress&cs=tinysrgb&w=1200&h=800&fit=crop';
+const heroImage = 'https://images.pexels.com/photos/7640443/pexels-photo-7640443.jpeg?auto=compress&cs=tinysrgb&w=800';
 
 const faqs = [
   {
@@ -58,12 +58,13 @@ const howItWorksSteps = [
   description="We find hungry, humble, smart A-players that cost less than 50% of their U.S. equivalent. Expert staffing agency for offshore talent."
 >
   <Hero
-    title="Find the right talent, half the cost"
-    description="Helm sources hungry, humble, smart A-players from offshore markets. Get the support your business needs without the overhead."
-    primaryCTA={{ text: 'Quote', openModal: true }}
-    secondaryCTA={{ text: 'Learn', href: '/how-it-works' }}
+    title="We find hungry, humble, smart A-players that cost less than 50% of their U.S. equivalent"
+    description="We're a staffing agency that finds the best offshore talent for your business."
+    primaryCTA={{ text: 'Request a quote', openModal: true }}
+    secondaryCTA={{ text: 'Learn more', href: '/how-it-works' }}
     image={heroImage}
-    imageAlt="Professional executive assistant working remotely"
+    imageAlt="Professional Helm EA"
+    imageCaption="Regina Sanchez, Helm EA since 2020"
   />
 
   <section class="py-20 lg:py-24 bg-gray-50">
