--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -21,7 +21,7 @@ import services from '../data/services.json';
   </section>
 
   <section class="py-20 bg-white">
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+    <div class="w-full px-8 sm:px-12 lg:px-16">
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mb-20">
         {services.map((service) => (
           <ServiceCard
