--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,7 @@ const navItems = [
 ---
 
 <header class="fixed top-0 left-0 right-0 z-50 transition-shadow duration-300" style="background-color: #343A5A;" id="header">
-  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+  <div class="w-full px-8 sm:px-12 lg:px-16">
     <div class="flex justify-between items-center h-20">
       <a href="/" class="flex items-center space-x-2" aria-label="Helm home">
         <img src="/images/logo/helm-white-logo-1.webp" alt="Helm" class="h-auto" width="105" height="48" />
