--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -71,7 +71,7 @@ const {
       <div class="flex flex-col items-center">
         {image && (
           <>
-            <div class="relative w-full max-w-md">
+            <div class="relative w-80">
               <div class="aspect-square rounded-full overflow-hidden shadow-2xl">
                 <img
                   src={image}
