--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import services from '../data/services.json';
 import testimonials from '../data/testimonials.json';
 import logos from '../data/logos.json';
 
-const heroImage = 'https://images.pexels.com/photos/7640443/pexels-photo-7640443.jpeg?auto=compress&cs=tinysrgb&w=800';
+const heroImage = '/images/people/regina-sanchez.jpg';
 
 const faqs = [
   {
