--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -103,8 +103,8 @@ const {
 
   .hero-secondary-btn {
     background-color: white;
-    border-color: rgb(52, 58, 90);
-    color: rgb(52, 58, 90);
+    border-color: #343A5A;
+    color: #343A5A;
   }
 
   .hero-secondary-btn:hover,
